<resources>
    <string name="t_app_name">ticktick</string>
    <string name="e_mail">email</string>
    <string name="ep_password">password</string>
    <string name="login_button_text">Login</string>
    <string name="t_swipe_left_for_register">swipe left for register</string>

    <string name="et_name">name</string>
    <string name="ep_phone">phone eg: 0541234567</string>
    <string name="t_register">Register</string>
    <string name="t_tag">welcome!</string>
    <string name="ep_password_re">re-enter password</string>
    <string name="t_swipe_right_for_login">swipe right for register</string>

    <string name="t_greeting">Welcome!</string>

    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>

    <string name="order_lesson">Order a lesson</string>
    <string name="lesson_set">lesson set!</string>
    <string name="lesson_passed">lesson passed</string>
    <string name="cancel_lesson">Cancel Lesson</string>
    <string name="cancel_lesson_confirmation">are you sure you want to cancel the lesson:</string>
    <string name="no_teacher_text">You are not currently signed to any teachers</string>
    <string name="lesson_taken">Lesson is taken</string>

    <string name="teacher_settings_title">Settings</string>
    <string name="t_day_header">Day</string>
    <string name="t_starting_time_header">Start</string>
    <string name="t_ending_time_header">End</string>
    <string name="t_sunday">Sunday</string>
    <string name="t_monday">Monday</string>
    <string name="t_tuesday">Tuesday</string>
    <string name="t_wednesday">Wednesday</string>
    <string name="t_thursday">Thursday</string>
    <string name="t_friday">Friday</string>
    <string name="t_saturday">Saturday</string>
    <string name="b_apply">APPLY</string>

    <string name="t_email">email</string>
    <string name="t_name">name</string>
    <string name="t_phone">phone</string>
    <string name="t_password">password</string>


</resources>