<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsTeacherActivity">

    <TextView
        android:id="@+id/t_teacher_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/teacher_settings_title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintTop_toBottomOf="@+id/t_teacher_settings_title">

        <TableRow
            android:background="#e3faed"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t_day_header"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t_starting_time_header"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t_ending_time_header"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:background="#F0F7F7"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t_sunday"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/start_time_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="07:00"
                android:inputType="time" />

            <EditText
                android:id="@+id/end_time_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="22:00"
                android:inputType="time" />
        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t_monday"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/start_time_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="07:00"
                android:inputType="time" />

            <EditText
                android:id="@+id/end_time_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="22:00"
                android:inputType="time" />
        </TableRow>

        <TableRow
            android:background="#F0F7F7"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t_tuesday"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/start_time_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="07:00"
                android:inputType="time" />

            <EditText
                android:id="@+id/end_time_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="22:00"
                android:inputType="time" />
        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t_wednesday"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/start_time_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="07:00"
                android:inputType="time" />

            <EditText
                android:id="@+id/end_time_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="22:00"
                android:inputType="time" />
        </TableRow>

        <TableRow
            android:background="#F0F7F7"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t_thursday"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/start_time_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="07:00"
                android:inputType="time" />

            <EditText
                android:id="@+id/end_time_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="22:00"
                android:inputType="time" />
        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t_friday"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/start_time_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="07:00"
                android:inputType="time" />

            <EditText
                android:id="@+id/end_time_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="22:00"
                android:inputType="time" />
        </TableRow>

        <TableRow
            android:background="#F0F7F7"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t_saturday"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/start_time_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="07:00"
                android:inputType="time" />

            <EditText
                android:id="@+id/end_time_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="22:00"
                android:inputType="time" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/b_apply_settings"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/b_apply"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.511" />

</androidx.constraintlayout.widget.ConstraintLayout>