<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDetailsActivity">

    <TextView
        android:id="@+id/edit_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/teacher_settings_title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_details_title">
        <!--        public String email;-->
        <!--        public String name;-->
        <!--        public String phone;-->
        <!--        public String password;-->
        <TableRow
            android:background="#e3faed"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_email"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/tea_email_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
            />
        </TableRow>

        <TableRow
            android:background="#e3faed"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_name"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
            />
        </TableRow>

        <TableRow
            android:background="#e3faed"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_phone"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ep_phone_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />
        </TableRow>

        <TableRow
            android:background="#e3faed"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_password"
                android:textSize="24sp"
                android:paddingEnd="30dp"/>

            <EditText
                android:id="@+id/et_password_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
            />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/b_apply_changes"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/b_apply"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.511" />


</androidx.constraintlayout.widget.ConstraintLayout>